--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <meta name="MobileOptimized" content="320">
     <meta name="mobile-web-app-capable" content="yes">
 
+    <!-- Adsense Code -->
+     <meta name="google-adsense-account" content="ca-pub-1255729468967104">
+
     <!-- Performance & Speed Optimization -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -510,6 +513,8 @@
             }
         }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1255729468967104"
+     crossorigin="anonymous"></script>
 </head>
 
 <body class="font-inter bg-green-50 dark:bg-gray-900 text-gray-900 dark:text-white transition-colors duration-300">
